--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -16,12 +16,12 @@ jobs:
       matrix:
         node-version: [18.x, 20.x, 22.x]
     steps:
-    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: website/package-lock.json
     - name: Install dependencies
       run: npm ci
       working-directory: ./website
