--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,10 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./website
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -34,6 +38,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+
+    defaults:
+      run:
+        working-directory: ./website
 
     steps:
       - name: Download artifact
