--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,37 +1,37 @@
-name: ESLint
+# name: ESLint
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-    steps:
-    - name: Debug lock file
-      run: ls -l website/package-lock.json
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         node-version: [18.x, 20.x, 22.x]
+#     steps:
+#     - name: Debug lock file
+#       run: ls -l website/package-lock.json
     
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: website/package-lock.json
+#     - uses: actions/checkout@v4
+#     - name: Use Node.js ${{ matrix.node-version }}
+#       uses: actions/setup-node@v4
+#       with:
+#         node-version: ${{ matrix.node-version }}
+#         cache: 'npm'
+#         cache-dependency-path: website/package-lock.json
 
-    - name: Install dependencies
-      run: npm ci
-      working-directory: ./website
+#     - name: Install dependencies
+#       run: npm ci
+#       working-directory: ./website
       
-    - name: Build
-      run: npm run build --if-present
-      working-directory: ./website
+#     - name: Build
+#       run: npm run build --if-present
+#       working-directory: ./website
       
-    - name: ESLint
-      run: npm run lint
-      working-directory: ./website
+#     - name: ESLint
+#       run: npm run lint
+#       working-directory: ./website
