feat: complete coming soon page
- fix: set App component width to full viewport
- refactor: move Title to separate component
- feat: add Poppins font faces (regular, medium, bold)
- feat: create load indicator for coming soon page
- chore: move font faces from index.css to font-faces.css
- chore: upgrade vite-tsconfig-paths to v5.1.4
- feat: add @public and @fonts to tsconfig paths

BREAKING CHANGE: useViewCounter hook no longer works

--- a/website/tsconfig.app.json
+++ b/website/tsconfig.app.json
@@ -4,7 +4,9 @@
     "paths": {
       "@pages/*": ["./pages/*"],
       "@widgets/*": ["./widgets/*"],
-      "@app/*": ["./app/*"]
+      "@app/*": ["./app/*"],
+      "@public/*": ["../public/*"],
+      "@fonts/*": ["../public/fonts/*"]
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
