feat!: major update with new components and structure changes
BREAKING CHANGE:
- Renamed 'ComingSoon' to 'ComingSoonPage'
- Moved background image from public/ to shared/assets
- Removed ViewCounter.tsx and old indicator

### Features
- Created `BackgroundImage` component (uses `<img>`)
- Created `Button` component (uses `<button>`)
- Created `DateCountdown` with `deployDate.ts` for deploy time tracking
- Created `FontChangingText` for welcome page
- Created `Icon` and `IconButton` components
- Created `Layout` component (uses `<div>`)
- Created `WindowManager.ts` and `TimeManager.ts` for control logic
- Added GitHub icon to project
- Created base `use` hook

### Refactors
- Renamed `ComingSoon` to `ComingSoonPage` to clarify intent
- Moved `background-elements.png` from `public/` to `shared/assets/`

### Fixes
- Fixed custom font faces

### Chores
- Removed unnecessary styles in `app.css`
- Updated `index.css`
- Updated title

--- a/website/tsconfig.app.json
+++ b/website/tsconfig.app.json
@@ -6,7 +6,10 @@
       "@widgets/*": ["./widgets/*"],
       "@app/*": ["./app/*"],
       "@public/*": ["../public/*"],
-      "@fonts/*": ["../public/fonts/*"]
+      "@fonts/*": ["../public/fonts/*"],
+      "@shared/*": ["./shared/*"],
+      "@ui/*": ["./shared/ui/*"],
+      "@assets/*": ["./shared/assets/*"]
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
