--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
         working-directory: ./website
         run: npm install
 
+      - name: Install SaSS
+        working-directory: ./website
+        run: npm install -D sass-embedded
+
       - name: Build project
         working-directory: ./website
         run: npm run build
